# homework_31

./: .gitignore  db.sqlite3  jsonconv.py  manage.py  pyproject.toml  pytest.ini
ads/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
ads/fixtures/: ads.json
ads/migrations/: 0001_initial.py  0002_rename_categories_category.py
category/: models.py  serializers.py  urls.py  views.py
fixtures/: ads.csv  category.csv  user.csv
homework_django/: asgi.py  settings.py  urls.py  wsgi.py
selection/: models.py  serializers.py  urls.py  views.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ads_create_test.py  ads_list_test.py  ads_retrieve_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  urls.py  views.py
